examples/bad/static_error_invalid_type_of_argument.ps
int f(int x, int y) {
    return x + y;
}

print(f(1, "str"));